2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c (gtk_label_do_popup): Adjust to the current
	entry popup menu.

	Make GDK+ compile with X11R5 (#148032)
	
	* gdk/x11/xsettings-client.c (xsettings_client_new): 
	* gdk/x11/gdkproperty-x11.c (_gdk_x11_precache_atoms): Only
	use XInternAtoms if it is available.

	* gdk/x11/gdkasync.c: Include XIproto.h if necessary.

	* configure.in: Check for XInternAtoms and X headers needed for
	xReply.
	
	* configure.in: Bump version.

	* === Released 2.5.5 ===
	
	* gtk/gtkwindow.c (gtk_window_activate_key_after): Add parentheses 
	around comparison in operand of &.

	* gtk/gtkcalendar.c: Replace a non-ASCII character in a comment.

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am (pixbuf_threads_LDADD): Make pixbuf-threads
	link.

	* NEWS: Updates

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am: Add pixbuf-threads

	* tests/pixbuf-threads.c: Test loading images in multiple
	threads.

2004-11-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Check for uxtheme.h  (#157967, J. Ali Harlow)

	* modules/engines/ms-windows/xp_theme.c: Use HAVE_UXTHEME_H
	to protect the #include <uxtheme.h> 

	* docs/tools/Makefile.am: Don't try to build doc-shooter on 
	Windows.  (#157979, J. Ali Harlow) 

	* gtk/gtkfilefilter.c: Don't try to use xdgmime on 
	Windows where we don't build it.   (#157944, J. Ali Harlow)

	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Also
	reserve space for the resize grip if the grip_window is not
	realized yet.  (#158010, Christian Persch)
	(gtk_statusbar_button_press): Only start a resize if the
	button press comes from the grip_window.  (#158011, Christian Persch)

2004-11-11  Tor Lillqvist  <tml@iki.fi>

	Fix for #137551, by Robert Ögren:

	* gdk/win32/gdkevents-win32.c (generate_focus_event): New function.

	(gdk_keyboard_grab, gdk_keyboard_ungrab): Generate focus change
	events.
	